[package]
name = "jam"
description = "WIPWIPWIP"
license = "MIT OR Apache-2.0 OR CC0-1.0"
authors = [
    "Jan Hohenheim <jan@hohenheim.ch>",
    "Joe Buehler <jbuehler23@gmail.com>",
    "Joona Aalto <jondolf.dev@gmail.com>",
    "Freyja Dunlin <freyjamoth@gmail.com>",
    "Nico Zweifel <nicozweifel@gmail.com>",
    "Atlas Dostal <email@atlasdostal.com>",
]
version = "0.1.0"
edition = "2024"
exclude = ["assets"]
readme = "readme.md"
keywords = ["bevy", "demo", "3d", "game"]
repository = "https://github.com/Bevy-Jam-7/jam"
categories = ["game-development"]
homepage = "https://janhohenheim.itch.io/jam"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "gltf_animation",
    "bevy_asset",
    "bevy_anti_alias",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_gizmos_render",
    "bevy_scene",
    "bevy_sprite",
    "sprite_picking",
    "bevy_state",
    "bevy_text",
    "bevy_ui_render",
    "ui_picking",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "jpeg",
    "tga",
    "ktx2",
    "png",
    "wayland",
    "zstd_rust",
    "reflect_auto_register",
] }
bevy_enhanced_input = "0.23"

# physics
avian3d = "0.6.0-rc.1"
avian_pickup = "0.5.0-rc.1"

# character controller
bevy_ahoy = "0.1.0-rc.1"

# navigation
bevy_landmass = "0.11.0"
landmass_rerecast = "0.2.0"
bevy_rerecast = { version = "0.4.0", default-features = false }
avian_rerecast = "0.5.0-rc.1"

# Level editor
bevy_trenchbroom = "0.12"
bevy_trenchbroom_avian = "0.13.0-rc.1"

# dialogue
bevy_yarnspinner = "0.7"
bevy_yarnspinner_example_dialogue_view = "0.7"

bevy_shuffle_bag = "0.4.0"
bevy-inspector-egui = { version = "0.36", optional = true }
bevy_fix_cursor_unlock_web = "0.3.0"
bevy_framepace = "0.21"
bevy_seedling = "0.7.0"

# Keep this in sync with Bevy
rand = "0.9"

# Compile low-severity logs out of web builds for performance.
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }

bitflags = "2"
anyhow = "1"
regex = "1"
bincode = "2"
# Latest version that works with bevy_seedling
wasm-bindgen = { version = "=0.2.108", optional = true }

bevy_hanabi = { version = "0.18", default-features = false, features = [
    "3d",
    "gpu_tests",
] }

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
native = []
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
    "dep:bevy-inspector-egui",
    "avian3d/diagnostic_ui",
    "bevy_rerecast/debug_plugin",
    "bevy_rerecast/editor_integration",
]
dev_native = [
    "dev",
    "native",
    "bevy/bevy_remote",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
    "bevy_rerecast/editor_integration",
]
web = ["bevy/webgpu", "bevy_seedling/web_audio", "dep:wasm-bindgen"]
release = []

[package.metadata.bevy_cli]
default-features = false

[package.metadata.bevy_cli.native]
features = ["native"]

[package.metadata.bevy_cli.native.dev]
features = ["dev_native"]

[package.metadata.bevy_cli.native.release]
features = ["release"]

[package.metadata.bevy_cli.web]
features = ["web"]

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[package.metadata.bevy_cli.web.release]
features = ["release"]

[package.metadata.bevy_cli.unstable]
web-multi-threading = true

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"


# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.release.package.wgpu-types]
debug-assertions = false

[patch.crates-io]
ab_glyph = { path = "vendor/ab_glyph" }
ab_glyph_rasterizer = { path = "vendor/ab_glyph_rasterizer" }
accesskit = { path = "vendor/accesskit" }
accesskit_consumer = { path = "vendor/accesskit_consumer" }
accesskit_macos = { path = "vendor/accesskit_macos" }
accesskit_windows = { path = "vendor/accesskit_windows" }
accesskit_winit = { path = "vendor/accesskit_winit" }
adler2 = { path = "vendor/adler2" }
ahash = { path = "vendor/ahash" }
aho-corasick = { path = "vendor/aho-corasick" }
allocator-api2 = { path = "vendor/allocator-api2" }
alsa = { path = "vendor/alsa" }
alsa-sys = { path = "vendor/alsa-sys" }
android_log-sys = { path = "vendor/android_log-sys" }
android_system_properties = { path = "vendor/android_system_properties" }
android-activity = { path = "vendor/android-activity" }
android-properties = { path = "vendor/android-properties" }
anes = { path = "vendor/anes" }
annotate-snippets = { path = "vendor/annotate-snippets" }
anstyle = { path = "vendor/anstyle" }
antlr-rust = { path = "vendor/antlr-rust" }
anyhow = { path = "vendor/anyhow" }
approx = { path = "vendor/approx" }
arbitrary-chunks = { path = "vendor/arbitrary-chunks" }
arboard = { path = "vendor/arboard" }
arrayref = { path = "vendor/arrayref" }
arrayvec = { path = "vendor/arrayvec" }
ash = { path = "vendor/ash" }
as-raw-xcb-connection = { path = "vendor/as-raw-xcb-connection" }
assert_type_match = { path = "vendor/assert_type_match" }
async-broadcast = { path = "vendor/async-broadcast" }
async-channel = { path = "vendor/async-channel" }
async-executor = { path = "vendor/async-executor" }
async-fs = { path = "vendor/async-fs" }
async-io = { path = "vendor/async-io" }
async-lock = { path = "vendor/async-lock" }
async-task = { path = "vendor/async-task" }
atomicow = { path = "vendor/atomicow" }
atomic-waker = { path = "vendor/atomic-waker" }
autocfg = { path = "vendor/autocfg" }
avian_derive = { path = "vendor/avian_derive" }
avian_pickup = { path = "vendor/avian_pickup" }
avian_rerecast = { path = "vendor/avian_rerecast" }
avian3d = { path = "vendor/avian3d" }
base64 = { path = "vendor/base64" }
better_any = { path = "vendor/better_any" }
bevy = { path = "vendor/bevy" }
bevy_a11y = { path = "vendor/bevy_a11y" }
bevy_ahoy = { path = "vendor/bevy_ahoy" }
bevy_android = { path = "vendor/bevy_android" }
bevy_animation = { path = "vendor/bevy_animation" }
bevy_animation_macros = { path = "vendor/bevy_animation_macros" }
bevy_anti_alias = { path = "vendor/bevy_anti_alias" }
bevy_app = { path = "vendor/bevy_app" }
bevy_asset = { path = "vendor/bevy_asset" }
bevy_asset_macros = { path = "vendor/bevy_asset_macros" }
bevy_camera = { path = "vendor/bevy_camera" }
bevy_color = { path = "vendor/bevy_color" }
bevy_core_pipeline = { path = "vendor/bevy_core_pipeline" }
bevy_derive = { path = "vendor/bevy_derive" }
bevy_dev_tools = { path = "vendor/bevy_dev_tools" }
bevy_diagnostic = { path = "vendor/bevy_diagnostic" }
bevy_dylib = { path = "vendor/bevy_dylib" }
bevy_ecs = { path = "vendor/bevy_ecs" }
bevy_ecs_macros = { path = "vendor/bevy_ecs_macros" }
bevy_egui = { path = "vendor/bevy_egui" }
bevy_encase_derive = { path = "vendor/bevy_encase_derive" }
bevy_enhanced_input = { path = "vendor/bevy_enhanced_input" }
bevy_enhanced_input_macros = { path = "vendor/bevy_enhanced_input_macros" }
bevy_fix_cursor_unlock_web = { path = "vendor/bevy_fix_cursor_unlock_web" }
bevy_framepace = { path = "vendor/bevy_framepace" }
bevy_gilrs = { path = "vendor/bevy_gilrs" }
bevy_gizmos = { path = "vendor/bevy_gizmos" }
bevy_gizmos_macros = { path = "vendor/bevy_gizmos_macros" }
bevy_gizmos_render = { path = "vendor/bevy_gizmos_render" }
bevy_gltf = { path = "vendor/bevy_gltf" }
bevy_hanabi = { path = "vendor/bevy_hanabi" }
bevy_heavy = { path = "vendor/bevy_heavy" }
bevy_image = { path = "vendor/bevy_image" }
bevy_input = { path = "vendor/bevy_input" }
bevy_input_focus = { path = "vendor/bevy_input_focus" }
bevy_internal = { path = "vendor/bevy_internal" }
bevy_landmass = { path = "vendor/bevy_landmass" }
bevy_light = { path = "vendor/bevy_light" }
bevy_log = { path = "vendor/bevy_log" }
bevy_macro_utils = { path = "vendor/bevy_macro_utils" }
bevy_materialize = { path = "vendor/bevy_materialize" }
bevy_math = { path = "vendor/bevy_math" }
bevy_mesh = { path = "vendor/bevy_mesh" }
bevy_mikktspace = { path = "vendor/bevy_mikktspace" }
bevy_pbr = { path = "vendor/bevy_pbr" }
bevy_picking = { path = "vendor/bevy_picking" }
bevy_platform = { path = "vendor/bevy_platform" }
bevy_post_process = { path = "vendor/bevy_post_process" }
bevy_ptr = { path = "vendor/bevy_ptr" }
bevy_reflect = { path = "vendor/bevy_reflect" }
bevy_reflect_derive = { path = "vendor/bevy_reflect_derive" }
bevy_remote = { path = "vendor/bevy_remote" }
bevy_render = { path = "vendor/bevy_render" }
bevy_render_macros = { path = "vendor/bevy_render_macros" }
bevy_rerecast = { path = "vendor/bevy_rerecast" }
bevy_rerecast_core = { path = "vendor/bevy_rerecast_core" }
bevy_rerecast_editor_integration = { path = "vendor/bevy_rerecast_editor_integration" }
bevy_scene = { path = "vendor/bevy_scene" }
bevy_seedling = { path = "vendor/bevy_seedling" }
bevy_seedling_macros = { path = "vendor/bevy_seedling_macros" }
bevy_shader = { path = "vendor/bevy_shader" }
bevy_shuffle_bag = { path = "vendor/bevy_shuffle_bag" }
bevy_sprite = { path = "vendor/bevy_sprite" }
bevy_sprite_render = { path = "vendor/bevy_sprite_render" }
bevy_state = { path = "vendor/bevy_state" }
bevy_state_macros = { path = "vendor/bevy_state_macros" }
bevy_tasks = { path = "vendor/bevy_tasks" }
bevy_text = { path = "vendor/bevy_text" }
bevy_time = { path = "vendor/bevy_time" }
bevy_transform = { path = "vendor/bevy_transform" }
bevy_transform_interpolation = { path = "vendor/bevy_transform_interpolation" }
bevy_trenchbroom = { path = "vendor/bevy_trenchbroom" }
bevy_trenchbroom_avian = { path = "vendor/bevy_trenchbroom_avian" }
bevy_trenchbroom_macros = { path = "vendor/bevy_trenchbroom_macros" }
bevy_ui = { path = "vendor/bevy_ui" }
bevy_ui_render = { path = "vendor/bevy_ui_render" }
bevy_utils = { path = "vendor/bevy_utils" }
bevy_window = { path = "vendor/bevy_window" }
bevy_winit = { path = "vendor/bevy_winit" }
bevy_yarnspinner = { path = "vendor/bevy_yarnspinner" }
bevy_yarnspinner_example_dialogue_view = { path = "vendor/bevy_yarnspinner_example_dialogue_view" }
bevy-inspector-egui = { path = "vendor/bevy-inspector-egui" }
bevy-inspector-egui-derive = { path = "vendor/bevy-inspector-egui-derive" }
bincode = { path = "vendor/bincode" }
bincode_derive = { path = "vendor/bincode_derive" }
bitflags = { path = "vendor/bitflags" }
bit-set = { path = "vendor/bit-set" }
bit-vec = { path = "vendor/bit-vec" }
blake3 = { path = "vendor/blake3" }
block = { path = "vendor/block" }
block2 = { path = "vendor/block2" }
block-buffer = { path = "vendor/block-buffer" }
blocking = { path = "vendor/blocking" }
block-pseudorand = { path = "vendor/block-pseudorand" }
bstr = { path = "vendor/bstr" }
bumpalo = { path = "vendor/bumpalo" }
bytemuck = { path = "vendor/bytemuck" }
bytemuck_derive = { path = "vendor/bytemuck_derive" }
byteorder = { path = "vendor/byteorder" }
byteorder-lite = { path = "vendor/byteorder-lite" }
bytes = { path = "vendor/bytes" }
calloop = { path = "vendor/calloop" }
calloop-wayland-source = { path = "vendor/calloop-wayland-source" }
cast = { path = "vendor/cast" }
cc = { path = "vendor/cc" }
cesu8 = { path = "vendor/cesu8" }
cfg_aliases = { path = "vendor/cfg_aliases" }
cfg-if = { path = "vendor/cfg-if" }
chiapos-chacha8 = { path = "vendor/chiapos-chacha8" }
ciborium = { path = "vendor/ciborium" }
ciborium-io = { path = "vendor/ciborium-io" }
ciborium-ll = { path = "vendor/ciborium-ll" }
clap = { path = "vendor/clap" }
clap_builder = { path = "vendor/clap_builder" }
clap_lex = { path = "vendor/clap_lex" }
clipboard-win = { path = "vendor/clipboard-win" }
cmake = { path = "vendor/cmake" }
codespan-reporting = { path = "vendor/codespan-reporting" }
combine = { path = "vendor/combine" }
concurrent-queue = { path = "vendor/concurrent-queue" }
console_error_panic_hook = { path = "vendor/console_error_panic_hook" }
const_panic = { path = "vendor/const_panic" }
const_soft_float = { path = "vendor/const_soft_float" }
constant_time_eq = { path = "vendor/constant_time_eq" }
const-fnv1a-hash = { path = "vendor/const-fnv1a-hash" }
constgebra = { path = "vendor/constgebra" }
convert_case = { path = "vendor/convert_case" }
core_maths = { path = "vendor/core_maths" }
coreaudio-rs = { path = "vendor/coreaudio-rs" }
core-foundation = { path = "vendor/core-foundation" }
core-foundation-sys = { path = "vendor/core-foundation-sys" }
core-graphics = { path = "vendor/core-graphics" }
core-graphics-types = { path = "vendor/core-graphics-types" }
cosmic-text = { path = "vendor/cosmic-text" }
cpal = { path = "vendor/cpal" }
cpufeatures = { path = "vendor/cpufeatures" }
crc32fast = { path = "vendor/crc32fast" }
criterion = { path = "vendor/criterion" }
criterion-plot = { path = "vendor/criterion-plot" }
critical-section = { path = "vendor/critical-section" }
crossbeam-channel = { path = "vendor/crossbeam-channel" }
crossbeam-deque = { path = "vendor/crossbeam-deque" }
crossbeam-epoch = { path = "vendor/crossbeam-epoch" }
crossbeam-queue = { path = "vendor/crossbeam-queue" }
crossbeam-utils = { path = "vendor/crossbeam-utils" }
crunchy = { path = "vendor/crunchy" }
crypto-common = { path = "vendor/crypto-common" }
csv = { path = "vendor/csv" }
csv-core = { path = "vendor/csv-core" }
ctrlc = { path = "vendor/ctrlc" }
cursor-icon = { path = "vendor/cursor-icon" }
darling = { path = "vendor/darling" }
darling_core = { path = "vendor/darling_core" }
darling_macro = { path = "vendor/darling_macro" }
dasp_sample = { path = "vendor/dasp_sample" }
data-encoding = { path = "vendor/data-encoding" }
default-struct-builder = { path = "vendor/default-struct-builder" }
deluxe = { path = "vendor/deluxe" }
deluxe-core = { path = "vendor/deluxe-core" }
deluxe-macros = { path = "vendor/deluxe-macros" }
derive_more = { path = "vendor/derive_more" }
derive_more-impl = { path = "vendor/derive_more-impl" }
digest = { path = "vendor/digest" }
disjoint = { path = "vendor/disjoint" }
disjoint-sets = { path = "vendor/disjoint-sets" }
dispatch = { path = "vendor/dispatch" }
dispatch2 = { path = "vendor/dispatch2" }
displaydoc = { path = "vendor/displaydoc" }
disqualified = { path = "vendor/disqualified" }
dlib = { path = "vendor/dlib" }
document-features = { path = "vendor/document-features" }
dodgy_2d = { path = "vendor/dodgy_2d" }
downcast-rs = { path = "vendor/downcast-rs" }
dpi = { path = "vendor/dpi" }
earcutr = { path = "vendor/earcutr" }
ecolor = { path = "vendor/ecolor" }
egui = { path = "vendor/egui" }
either = { path = "vendor/either" }
emath = { path = "vendor/emath" }
ena = { path = "vendor/ena" }
encase = { path = "vendor/encase" }
encase_derive = { path = "vendor/encase_derive" }
encase_derive_impl = { path = "vendor/encase_derive_impl" }
encoding_rs = { path = "vendor/encoding_rs" }
enumflags2 = { path = "vendor/enumflags2" }
enumflags2_derive = { path = "vendor/enumflags2_derive" }
enumn = { path = "vendor/enumn" }
epaint = { path = "vendor/epaint" }
epaint_default_fonts = { path = "vendor/epaint_default_fonts" }
equivalent = { path = "vendor/equivalent" }
erased-serde = { path = "vendor/erased-serde" }
errno = { path = "vendor/errno" }
error-code = { path = "vendor/error-code" }
euclid = { path = "vendor/euclid" }
event-listener = { path = "vendor/event-listener" }
event-listener-strategy = { path = "vendor/event-listener-strategy" }
extended = { path = "vendor/extended" }
fast-interleave = { path = "vendor/fast-interleave" }
fastrand = { path = "vendor/fastrand" }
fax = { path = "vendor/fax" }
fax_derive = { path = "vendor/fax_derive" }
fdeflate = { path = "vendor/fdeflate" }
file-id = { path = "vendor/file-id" }
find-msvc-tools = { path = "vendor/find-msvc-tools" }
firewheel = { path = "vendor/firewheel" }
firewheel-core = { path = "vendor/firewheel-core" }
firewheel-cpal = { path = "vendor/firewheel-cpal" }
firewheel-graph = { path = "vendor/firewheel-graph" }
firewheel-ircam-hrtf = { path = "vendor/firewheel-ircam-hrtf" }
firewheel-macros = { path = "vendor/firewheel-macros" }
firewheel-nodes = { path = "vendor/firewheel-nodes" }
firewheel-pool = { path = "vendor/firewheel-pool" }
firewheel-rtaudio = { path = "vendor/firewheel-rtaudio" }
firewheel-symphonium = { path = "vendor/firewheel-symphonium" }
firewheel-web-audio = { path = "vendor/firewheel-web-audio" }
fixed_decimal = { path = "vendor/fixed_decimal" }
fixedbitset = { path = "vendor/fixedbitset" }
fixed-resample = { path = "vendor/fixed-resample" }
flate2 = { path = "vendor/flate2" }
float_next_after = { path = "vendor/float_next_after" }
float-ord = { path = "vendor/float-ord" }
fnv = { path = "vendor/fnv" }
foldhash = { path = "vendor/foldhash" }
fontconfig-parser = { path = "vendor/fontconfig-parser" }
fontdb = { path = "vendor/fontdb" }
font-types = { path = "vendor/font-types" }
foreign-types = { path = "vendor/foreign-types" }
foreign-types-macros = { path = "vendor/foreign-types-macros" }
foreign-types-shared = { path = "vendor/foreign-types-shared" }
fsevent-sys = { path = "vendor/fsevent-sys" }
futures-channel = { path = "vendor/futures-channel" }
futures-core = { path = "vendor/futures-core" }
futures-io = { path = "vendor/futures-io" }
futures-lite = { path = "vendor/futures-lite" }
futures-macro = { path = "vendor/futures-macro" }
futures-task = { path = "vendor/futures-task" }
futures-util = { path = "vendor/futures-util" }
fuzzy-matcher = { path = "vendor/fuzzy-matcher" }
generic-array = { path = "vendor/generic-array" }
geo = { path = "vendor/geo" }
geographiclib-rs = { path = "vendor/geographiclib-rs" }
geo-types = { path = "vendor/geo-types" }
gethostname = { path = "vendor/gethostname" }
getrandom = { path = "vendor/getrandom" }
gilrs = { path = "vendor/gilrs" }
gilrs-core = { path = "vendor/gilrs-core" }
glam = { path = "vendor/glam" }
glam_matrix_extras = { path = "vendor/glam_matrix_extras" }
glamx = { path = "vendor/glamx" }
glob = { path = "vendor/glob" }
gltf = { path = "vendor/gltf" }
gltf-derive = { path = "vendor/gltf-derive" }
gltf-json = { path = "vendor/gltf-json" }
gpu-alloc = { path = "vendor/gpu-alloc" }
gpu-allocator = { path = "vendor/gpu-allocator" }
gpu-alloc-types = { path = "vendor/gpu-alloc-types" }
gpu-descriptor = { path = "vendor/gpu-descriptor" }
gpu-descriptor-types = { path = "vendor/gpu-descriptor-types" }
grid = { path = "vendor/grid" }
guillotiere = { path = "vendor/guillotiere" }
half = { path = "vendor/half" }
harfrust = { path = "vendor/harfrust" }
hash32 = { path = "vendor/hash32" }
hashbrown = { path = "vendor/hashbrown" }
heapless = { path = "vendor/heapless" }
heck = { path = "vendor/heck" }
hermit-abi = { path = "vendor/hermit-abi" }
hexasphere = { path = "vendor/hexasphere" }
hexf-parse = { path = "vendor/hexf-parse" }
hrtf = { path = "vendor/hrtf" }
http = { path = "vendor/http" }
httparse = { path = "vendor/httparse" }
http-body = { path = "vendor/http-body" }
http-body-util = { path = "vendor/http-body-util" }
httpdate = { path = "vendor/httpdate" }
hyper = { path = "vendor/hyper" }
i_float = { path = "vendor/i_float" }
i_key_sort = { path = "vendor/i_key_sort" }
i_overlay = { path = "vendor/i_overlay" }
i_shape = { path = "vendor/i_shape" }
i_tree = { path = "vendor/i_tree" }
icu_locid = { path = "vendor/icu_locid" }
icu_locid_transform = { path = "vendor/icu_locid_transform" }
icu_locid_transform_data = { path = "vendor/icu_locid_transform_data" }
icu_plurals = { path = "vendor/icu_plurals" }
icu_plurals_data = { path = "vendor/icu_plurals_data" }
icu_provider = { path = "vendor/icu_provider" }
icu_provider_macros = { path = "vendor/icu_provider_macros" }
ident_case = { path = "vendor/ident_case" }
if_chain = { path = "vendor/if_chain" }
image = { path = "vendor/image" }
indexmap = { path = "vendor/indexmap" }
inflections = { path = "vendor/inflections" }
inotify = { path = "vendor/inotify" }
inotify-sys = { path = "vendor/inotify-sys" }
instant = { path = "vendor/instant" }
inventory = { path = "vendor/inventory" }
is-terminal = { path = "vendor/is-terminal" }
itertools = { path = "vendor/itertools" }
itoa = { path = "vendor/itoa" }
jni = { path = "vendor/jni" }
jni-sys = { path = "vendor/jni-sys" }
jobserver = { path = "vendor/jobserver" }
js-sys = { path = "vendor/js-sys" }
jzon = { path = "vendor/jzon" }
kdtree = { path = "vendor/kdtree" }
kqueue = { path = "vendor/kqueue" }
kqueue-sys = { path = "vendor/kqueue-sys" }
ktx2 = { path = "vendor/ktx2" }
landmass = { path = "vendor/landmass" }
landmass_rerecast = { path = "vendor/landmass_rerecast" }
lazy_static = { path = "vendor/lazy_static" }
libc = { path = "vendor/libc" }
libloading = { path = "vendor/libloading" }
libm = { path = "vendor/libm" }
libredox = { path = "vendor/libredox" }
libudev-sys = { path = "vendor/libudev-sys" }
linebender_resource_handle = { path = "vendor/linebender_resource_handle" }
linux-raw-sys = { path = "vendor/linux-raw-sys" }
litemap = { path = "vendor/litemap" }
litrs = { path = "vendor/litrs" }
lock_api = { path = "vendor/lock_api" }
log = { path = "vendor/log" }
mach2 = { path = "vendor/mach2" }
malloc_buf = { path = "vendor/malloc_buf" }
matchers = { path = "vendor/matchers" }
memchr = { path = "vendor/memchr" }
memmap2 = { path = "vendor/memmap2" }
metal = { path = "vendor/metal" }
miniz_oxide = { path = "vendor/miniz_oxide" }
mio = { path = "vendor/mio" }
moxcms = { path = "vendor/moxcms" }
murmur3 = { path = "vendor/murmur3" }
naga = { path = "vendor/naga" }
naga_oil = { path = "vendor/naga_oil" }
nanorand = { path = "vendor/nanorand" }
ndk = { path = "vendor/ndk" }
ndk-context = { path = "vendor/ndk-context" }
ndk-sys = { path = "vendor/ndk-sys" }
ndshape = { path = "vendor/ndshape" }
nil = { path = "vendor/nil" }
nix = { path = "vendor/nix" }
nohash-hasher = { path = "vendor/nohash-hasher" }
nonmax = { path = "vendor/nonmax" }
normpath = { path = "vendor/normpath" }
notify = { path = "vendor/notify" }
notify-debouncer-full = { path = "vendor/notify-debouncer-full" }
notify-types = { path = "vendor/notify-types" }
ntapi = { path = "vendor/ntapi" }
nu-ansi-term = { path = "vendor/nu-ansi-term" }
num_enum = { path = "vendor/num_enum" }
num_enum_derive = { path = "vendor/num_enum_derive" }
num-complex = { path = "vendor/num-complex" }
num-derive = { path = "vendor/num-derive" }
num-integer = { path = "vendor/num-integer" }
num-traits = { path = "vendor/num-traits" }
objc = { path = "vendor/objc" }
objc2 = { path = "vendor/objc2" }
objc2-app-kit = { path = "vendor/objc2-app-kit" }
objc2-audio-toolbox = { path = "vendor/objc2-audio-toolbox" }
objc2-avf-audio = { path = "vendor/objc2-avf-audio" }
objc2-cloud-kit = { path = "vendor/objc2-cloud-kit" }
objc2-contacts = { path = "vendor/objc2-contacts" }
objc2-core-audio = { path = "vendor/objc2-core-audio" }
objc2-core-audio-types = { path = "vendor/objc2-core-audio-types" }
objc2-core-data = { path = "vendor/objc2-core-data" }
objc2-core-foundation = { path = "vendor/objc2-core-foundation" }
objc2-core-graphics = { path = "vendor/objc2-core-graphics" }
objc2-core-image = { path = "vendor/objc2-core-image" }
objc2-core-location = { path = "vendor/objc2-core-location" }
objc2-encode = { path = "vendor/objc2-encode" }
objc2-foundation = { path = "vendor/objc2-foundation" }
objc2-io-kit = { path = "vendor/objc2-io-kit" }
objc2-io-surface = { path = "vendor/objc2-io-surface" }
objc2-link-presentation = { path = "vendor/objc2-link-presentation" }
objc2-metal = { path = "vendor/objc2-metal" }
objc2-quartz-core = { path = "vendor/objc2-quartz-core" }
objc2-symbols = { path = "vendor/objc2-symbols" }
objc2-ui-kit = { path = "vendor/objc2-ui-kit" }
objc2-uniform-type-identifiers = { path = "vendor/objc2-uniform-type-identifiers" }
objc2-user-notifications = { path = "vendor/objc2-user-notifications" }
objc-sys = { path = "vendor/objc-sys" }
obvhs = { path = "vendor/obvhs" }
offset-allocator = { path = "vendor/offset-allocator" }
once_cell = { path = "vendor/once_cell" }
oorandom = { path = "vendor/oorandom" }
opener = { path = "vendor/opener" }
orbclient = { path = "vendor/orbclient" }
ordered-float = { path = "vendor/ordered-float" }
owned_ttf_parser = { path = "vendor/owned_ttf_parser" }
parking = { path = "vendor/parking" }
parking_lot = { path = "vendor/parking_lot" }
parking_lot_core = { path = "vendor/parking_lot_core" }
parry3d = { path = "vendor/parry3d" }
parry3d-f64 = { path = "vendor/parry3d-f64" }
partition = { path = "vendor/partition" }
paste = { path = "vendor/paste" }
percent-encoding = { path = "vendor/percent-encoding" }
petgraph = { path = "vendor/petgraph" }
pin-project = { path = "vendor/pin-project" }
pin-project-internal = { path = "vendor/pin-project-internal" }
pin-project-lite = { path = "vendor/pin-project-lite" }
pin-utils = { path = "vendor/pin-utils" }
piper = { path = "vendor/piper" }
pkg-config = { path = "vendor/pkg-config" }
plotters = { path = "vendor/plotters" }
plotters-backend = { path = "vendor/plotters-backend" }
plotters-svg = { path = "vendor/plotters-svg" }
png = { path = "vendor/png" }
polling = { path = "vendor/polling" }
portable-atomic = { path = "vendor/portable-atomic" }
portable-atomic-util = { path = "vendor/portable-atomic-util" }
pp-rs = { path = "vendor/pp-rs" }
ppv-lite86 = { path = "vendor/ppv-lite86" }
presser = { path = "vendor/presser" }
primal-check = { path = "vendor/primal-check" }
proc-macro2 = { path = "vendor/proc-macro2" }
proc-macro-crate = { path = "vendor/proc-macro-crate" }
proc-macro-error2 = { path = "vendor/proc-macro-error2" }
proc-macro-error-attr2 = { path = "vendor/proc-macro-error-attr2" }
profiling = { path = "vendor/profiling" }
prost = { path = "vendor/prost" }
prost-derive = { path = "vendor/prost-derive" }
pxfm = { path = "vendor/pxfm" }
quake-util = { path = "vendor/quake-util" }
quick-error = { path = "vendor/quick-error" }
quick-xml = { path = "vendor/quick-xml" }
quote = { path = "vendor/quote" }
radsort = { path = "vendor/radsort" }
rand = { path = "vendor/rand" }
rand_chacha = { path = "vendor/rand_chacha" }
rand_core = { path = "vendor/rand_core" }
rand_distr = { path = "vendor/rand_distr" }
rand_pcg = { path = "vendor/rand_pcg" }
range-alloc = { path = "vendor/range-alloc" }
rangemap = { path = "vendor/rangemap" }
raw-window-handle = { path = "vendor/raw-window-handle" }
rayon = { path = "vendor/rayon" }
rayon-core = { path = "vendor/rayon-core" }
rdst = { path = "vendor/rdst" }
read-fonts = { path = "vendor/read-fonts" }
realfft = { path = "vendor/realfft" }
rectangle-pack = { path = "vendor/rectangle-pack" }
redox_syscall = { path = "vendor/redox_syscall" }
r-efi = { path = "vendor/r-efi" }
regex = { path = "vendor/regex" }
regex-automata = { path = "vendor/regex-automata" }
regex-syntax = { path = "vendor/regex-syntax" }
renderdoc-sys = { path = "vendor/renderdoc-sys" }
rerecast = { path = "vendor/rerecast" }
ringbuf = { path = "vendor/ringbuf" }
robust = { path = "vendor/robust" }
ron = { path = "vendor/ron" }
roxmltree = { path = "vendor/roxmltree" }
rstar = { path = "vendor/rstar" }
rtaudio = { path = "vendor/rtaudio" }
rtaudio-sys = { path = "vendor/rtaudio-sys" }
rtgc = { path = "vendor/rtgc" }
rubato = { path = "vendor/rubato" }
rustc_version = { path = "vendor/rustc_version" }
rustc-hash = { path = "vendor/rustc-hash" }
rustfft = { path = "vendor/rustfft" }
rustix = { path = "vendor/rustix" }
rustversion = { path = "vendor/rustversion" }
rustybuzz = { path = "vendor/rustybuzz" }
ruzstd = { path = "vendor/ruzstd" }
ryu = { path = "vendor/ryu" }
safe_arch = { path = "vendor/safe_arch" }
same-file = { path = "vendor/same-file" }
scoped-tls = { path = "vendor/scoped-tls" }
scopeguard = { path = "vendor/scopeguard" }
sctk-adwaita = { path = "vendor/sctk-adwaita" }
self_cell = { path = "vendor/self_cell" }
semver = { path = "vendor/semver" }
send_wrapper = { path = "vendor/send_wrapper" }
serde = { path = "vendor/serde" }
serde_core = { path = "vendor/serde_core" }
serde_derive = { path = "vendor/serde_derive" }
serde_json = { path = "vendor/serde_json" }
serde_spanned = { path = "vendor/serde_spanned" }
sha2 = { path = "vendor/sha2" }
sharded-slab = { path = "vendor/sharded-slab" }
shlex = { path = "vendor/shlex" }
simba = { path = "vendor/simba" }
simd-adler32 = { path = "vendor/simd-adler32" }
skrifa = { path = "vendor/skrifa" }
slab = { path = "vendor/slab" }
slotmap = { path = "vendor/slotmap" }
smallvec = { path = "vendor/smallvec" }
smart-default = { path = "vendor/smart-default" }
smithay-client-toolkit = { path = "vendor/smithay-client-toolkit" }
smol_str = { path = "vendor/smol_str" }
smol-hyper = { path = "vendor/smol-hyper" }
spade = { path = "vendor/spade" }
spin = { path = "vendor/spin" }
spin_sleep = { path = "vendor/spin_sleep" }
spirv = { path = "vendor/spirv" }
stable_deref_trait = { path = "vendor/stable_deref_trait" }
stackfuture = { path = "vendor/stackfuture" }
static_assertions = { path = "vendor/static_assertions" }
strength_reduce = { path = "vendor/strength_reduce" }
strict-num = { path = "vendor/strict-num" }
strsim = { path = "vendor/strsim" }
strum = { path = "vendor/strum" }
strum_macros = { path = "vendor/strum_macros" }
svg_fmt = { path = "vendor/svg_fmt" }
swash = { path = "vendor/swash" }
symphonia = { path = "vendor/symphonia" }
symphonia-codec-pcm = { path = "vendor/symphonia-codec-pcm" }
symphonia-codec-vorbis = { path = "vendor/symphonia-codec-vorbis" }
symphonia-core = { path = "vendor/symphonia-core" }
symphonia-format-ogg = { path = "vendor/symphonia-format-ogg" }
symphonia-format-riff = { path = "vendor/symphonia-format-riff" }
symphonia-metadata = { path = "vendor/symphonia-metadata" }
symphonia-utils-xiph = { path = "vendor/symphonia-utils-xiph" }
symphonium = { path = "vendor/symphonium" }
syn = { path = "vendor/syn" }
synstructure = { path = "vendor/synstructure" }
sysinfo = { path = "vendor/sysinfo" }
sys-locale = { path = "vendor/sys-locale" }
taffy = { path = "vendor/taffy" }
termcolor = { path = "vendor/termcolor" }
thiserror = { path = "vendor/thiserror" }
thiserror-impl = { path = "vendor/thiserror-impl" }
thread_local = { path = "vendor/thread_local" }
thunderdome = { path = "vendor/thunderdome" }
tiff = { path = "vendor/tiff" }
tikv-jemallocator = { path = "vendor/tikv-jemallocator" }
tikv-jemalloc-sys = { path = "vendor/tikv-jemalloc-sys" }
tiny-skia = { path = "vendor/tiny-skia" }
tiny-skia-path = { path = "vendor/tiny-skia-path" }
tinystr = { path = "vendor/tinystr" }
tinytemplate = { path = "vendor/tinytemplate" }
tinyvec = { path = "vendor/tinyvec" }
tinyvec_macros = { path = "vendor/tinyvec_macros" }
tokio = { path = "vendor/tokio" }
toml = { path = "vendor/toml" }
toml_datetime = { path = "vendor/toml_datetime" }
toml_edit = { path = "vendor/toml_edit" }
toml_parser = { path = "vendor/toml_parser" }
toml_writer = { path = "vendor/toml_writer" }
tracing = { path = "vendor/tracing" }
tracing-attributes = { path = "vendor/tracing-attributes" }
tracing-core = { path = "vendor/tracing-core" }
tracing-log = { path = "vendor/tracing-log" }
tracing-oslog = { path = "vendor/tracing-oslog" }
tracing-subscriber = { path = "vendor/tracing-subscriber" }
tracing-wasm = { path = "vendor/tracing-wasm" }
transpose = { path = "vendor/transpose" }
triple_buffer = { path = "vendor/triple_buffer" }
ttf-parser = { path = "vendor/ttf-parser" }
twox-hash = { path = "vendor/twox-hash" }
typed-arena = { path = "vendor/typed-arena" }
typeid = { path = "vendor/typeid" }
typenum = { path = "vendor/typenum" }
typewit = { path = "vendor/typewit" }
unicode-bidi = { path = "vendor/unicode-bidi" }
unicode-bidi-mirroring = { path = "vendor/unicode-bidi-mirroring" }
unicode-ccc = { path = "vendor/unicode-ccc" }
unicode-ident = { path = "vendor/unicode-ident" }
unicode-linebreak = { path = "vendor/unicode-linebreak" }
unicode-normalization = { path = "vendor/unicode-normalization" }
unicode-properties = { path = "vendor/unicode-properties" }
unicode-script = { path = "vendor/unicode-script" }
unicode-segmentation = { path = "vendor/unicode-segmentation" }
unicode-width = { path = "vendor/unicode-width" }
unicode-xid = { path = "vendor/unicode-xid" }
unty = { path = "vendor/unty" }
uuid = { path = "vendor/uuid" }
valuable = { path = "vendor/valuable" }
variadics_please = { path = "vendor/variadics_please" }
vec_map = { path = "vendor/vec_map" }
version_check = { path = "vendor/version_check" }
virtue = { path = "vendor/virtue" }
voracious_radix_sort = { path = "vendor/voracious_radix_sort" }
walkdir = { path = "vendor/walkdir" }
wasi = { path = "vendor/wasi" }
wasip2 = { path = "vendor/wasip2" }
wasm-bindgen = { path = "vendor/wasm-bindgen" }
wasm-bindgen-futures = { path = "vendor/wasm-bindgen-futures" }
wasm-bindgen-macro = { path = "vendor/wasm-bindgen-macro" }
wasm-bindgen-macro-support = { path = "vendor/wasm-bindgen-macro-support" }
wasm-bindgen-shared = { path = "vendor/wasm-bindgen-shared" }
wayland-backend = { path = "vendor/wayland-backend" }
wayland-client = { path = "vendor/wayland-client" }
wayland-csd-frame = { path = "vendor/wayland-csd-frame" }
wayland-cursor = { path = "vendor/wayland-cursor" }
wayland-protocols = { path = "vendor/wayland-protocols" }
wayland-protocols-plasma = { path = "vendor/wayland-protocols-plasma" }
wayland-protocols-wlr = { path = "vendor/wayland-protocols-wlr" }
wayland-scanner = { path = "vendor/wayland-scanner" }
wayland-sys = { path = "vendor/wayland-sys" }
web-sys = { path = "vendor/web-sys" }
web-time = { path = "vendor/web-time" }
weezl = { path = "vendor/weezl" }
wgpu = { path = "vendor/wgpu" }
wgpu-core = { path = "vendor/wgpu-core" }
wgpu-core-deps-apple = { path = "vendor/wgpu-core-deps-apple" }
wgpu-core-deps-windows-linux-android = { path = "vendor/wgpu-core-deps-windows-linux-android" }
wgpu-hal = { path = "vendor/wgpu-hal" }
wgpu-types = { path = "vendor/wgpu-types" }
wide = { path = "vendor/wide" }
winapi = { path = "vendor/winapi" }
winapi-i686-pc-windows-gnu = { path = "vendor/winapi-i686-pc-windows-gnu" }
winapi-util = { path = "vendor/winapi-util" }
winapi-x86_64-pc-windows-gnu = { path = "vendor/winapi-x86_64-pc-windows-gnu" }
windows = { path = "vendor/windows" }
windows_aarch64_gnullvm = { path = "vendor/windows_aarch64_gnullvm" }
windows_aarch64_msvc = { path = "vendor/windows_aarch64_msvc" }
windows_i686_gnu = { path = "vendor/windows_i686_gnu" }
windows_i686_gnullvm = { path = "vendor/windows_i686_gnullvm" }
windows_i686_msvc = { path = "vendor/windows_i686_msvc" }
windows_x86_64_gnu = { path = "vendor/windows_x86_64_gnu" }
windows_x86_64_gnullvm = { path = "vendor/windows_x86_64_gnullvm" }
windows_x86_64_msvc = { path = "vendor/windows_x86_64_msvc" }
windows-collections = { path = "vendor/windows-collections" }
windows-core = { path = "vendor/windows-core" }
windows-future = { path = "vendor/windows-future" }
windows-implement = { path = "vendor/windows-implement" }
windows-interface = { path = "vendor/windows-interface" }
windows-link = { path = "vendor/windows-link" }
windows-numerics = { path = "vendor/windows-numerics" }
windows-result = { path = "vendor/windows-result" }
windows-strings = { path = "vendor/windows-strings" }
windows-sys = { path = "vendor/windows-sys" }
windows-targets = { path = "vendor/windows-targets" }
windows-threading = { path = "vendor/windows-threading" }
winit = { path = "vendor/winit" }
winnow = { path = "vendor/winnow" }
wit-bindgen = { path = "vendor/wit-bindgen" }
wmidi = { path = "vendor/wmidi" }
writeable = { path = "vendor/writeable" }
x11-dl = { path = "vendor/x11-dl" }
x11rb = { path = "vendor/x11rb" }
x11rb-protocol = { path = "vendor/x11rb-protocol" }
xcursor = { path = "vendor/xcursor" }
xkbcommon-dl = { path = "vendor/xkbcommon-dl" }
xkeysym = { path = "vendor/xkeysym" }
yarnspinner = { path = "vendor/yarnspinner" }
yarnspinner_compiler = { path = "vendor/yarnspinner_compiler" }
yarnspinner_core = { path = "vendor/yarnspinner_core" }
yarnspinner_internal_shared = { path = "vendor/yarnspinner_internal_shared" }
yarnspinner_runtime = { path = "vendor/yarnspinner_runtime" }
yazi = { path = "vendor/yazi" }
yoke = { path = "vendor/yoke" }
yoke-derive = { path = "vendor/yoke-derive" }
zeno = { path = "vendor/zeno" }
zerocopy = { path = "vendor/zerocopy" }
zerocopy-derive = { path = "vendor/zerocopy-derive" }
zerofrom = { path = "vendor/zerofrom" }
zerofrom-derive = { path = "vendor/zerofrom-derive" }
zerovec = { path = "vendor/zerovec" }
zerovec-derive = { path = "vendor/zerovec-derive" }
zmij = { path = "vendor/zmij" }
zune-core = { path = "vendor/zune-core" }
zune-jpeg = { path = "vendor/zune-jpeg" }
